# queryverse

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  compose.yml  docker-compose.yml  edges_pb2.py  feeder.py  prometheus.yml
backend/: Cargo.toml  build.rs
backend/src/: main.rs  models.rs  state.rs
conf/: grafana-datasources.yaml  otel-collector.yaml  tempo.yaml
conf/logstash/pipeline/: logstash.conf
crawler/: Cargo.toml  Dockerfile
crawler-api/: Cargo.toml  Dockerfile
crawler-api/src/: core.rs  database.rs  main.rs  redis.rs  robots.rs  routes.rs  state.rs
crawler-service/: Cargo.toml  Dockerfile  build.rs
crawler-service/src/: core.rs  crawl.rs  database.rs  log.rs  main.rs  models.rs  redis.rs  robots.rs  routes.rs  state.rs  traverse.rs
crawler/src/: crawl.rs  main.rs  redis.rs  robots.rs  state.rs  tls.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
language-processor-api/: Dockerfile  requirements.txt
language-processor-api/src/: main.py  vector_pb2.py
messaging-service/: Cargo.toml  Dockerfile  build.rs
messaging-service/src/: main.rs  queue.rs
proto/: crawler.proto  messaging.proto  tei.proto
selector-service/: Cargo.toml  Dockerfile  build.rs
selector-service/src/: core.rs  main.rs  models.rs  state.rs
shared/: edges.proto  vector.proto
utils/: Cargo.toml
utils/src/: database.rs  lib.rs  redis.rs
