[package]
name = "crawler-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bson = { version = "2.11", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
futures = "0.3"
lazy_static = "1.4"
mongodm = "0.10"
prost = "0.13"
qdrant-client = "1.9"
redis = { version = "0.27", features = ["tokio-comp"] }
regex = "1.10"
reqwest = "0.12"
robotstxt = "0.3"
scraper = { version = "0.20", features = ["atomic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5"
tokio = { version = "1.36", features = ["full"] }
tonic = "0.12"
tonic-health = "0.12"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
utils = { path = "../utils", features = ["redis"]}

[build-dependencies]
tonic-build = "0.12.2"
