[package]
name = "crawler-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.38"
config = "0.14"
ego-tree = "0.6.3"
futures = "0.3"
lapin = "2.5.0"
lazy_static = "1.4"
mime = "0.3.17"
mongodb = "3.1.0"
mongodm = "0.10.0"
prost = "0.13"
qdrant-client = "1.11.2"
redis = { version = "0.27.2", features = ["tokio-comp"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
robotstxt = "0.3"
scraper = { version = "0.20", features = ["atomic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5.0"
tokio = { version = "1.36", features = ["full"] }
tonic = "0.12"
tonic-health = "0.12"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
utils = { path = "../utils", features = ["redis", "database"]}

[build-dependencies]
tonic-build = "0.12.2"
