[package]
name = "messaging-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
config = "0.14.0"
prost = "0.13.2"
rand = "0.8.5"
redis = { version = "0.27.2", features = ["tokio-comp"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.2"
tonic-health = "0.12.2"
tracing = "0.1.40"
url = "2.5.2"
utils = { path = "../utils", features = ["redis"]}

[build-dependencies]
tonic-build = "0.12.2"
