[package]
name = "messaging-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
config = "0.14"
prost = "0.13"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tonic-health = "0.12"
tracing = "0.1"
url = "2.5"
utils = { path = "../utils", features = ["redis"]}

[build-dependencies]
tonic-build = "0.12"
