[package]
name = "selector-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
utils = { path = "../utils" }
config = "0.14"
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
