[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.27", optional = true }
opentelemetry = "0.26"
opentelemetry-otlp = { version = "0.26", features = ["tonic", "metrics", "logs"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.41", features = ["full"] }
futures = "0.3.30"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
mongodm = { version = "0.10.0", optional = true }
qdrant-client = { version = "1.11.2", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
bson = { version = "2.11", features = ["chrono-0_4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry-appender-tracing = "0.26.0"

[features]
redis = ["dep:redis"]
database = [
    "dep:mongodm",
    "dep:qdrant-client",
    "dep:serde",
    "dep:bson",
    "dep:chrono",
]
